# cudaMPCD

./: .gitignore  CMakeLists.txt  Demonstration.ipynb  Dockerfile  README.md  benchmark.py  environment.yml  input_file  noxfile.py  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
bindings/: bindings.cpp
include/: vektor_type.hpp
include/mpcd/api/: simulation_handle.hpp  simulation_parameters.hpp
include/mpcd/common/: simulation_parameters.hpp
src/: CMakeLists.txt  h5cpp.cpp
src/bindings/: CMakeLists.txt  bindings.cpp
src/libmpcd/: CMakeLists.txt
src/libmpcd/adapters/hdf5/: h5cpp.cpp
src/libmpcd/api/: simulation_parameters.cpp  simulator_handle.cpp
src/libmpcd/common/: backend.hpp  backend_factory.hpp  mechanic.hpp  mpc_cell.hpp  particle.hpp  probing.hpp  random.hpp  status_io.hpp  vector_3d.hpp
src/libmpcd/cpu_backend/: CMakeLists.txt  cpu_backend.cpp  cpu_backend.hpp  simulation_functions.cpp  simulation_functions.hpp  volume_container.hpp
src/libmpcd/cuda_backend/: CMakeLists.txt  backend_context.cu  backend_context.hpp  collision_strategy.cu  collision_strategy.hpp  cuda_allocator.hpp  cuda_backend.cu  cuda_backend.hpp  cuda_backend_impl.cu  cuda_backend_impl.hpp  device_volume_container.hpp  extended_collision.cu  extended_collision_strategy.cu  extended_collision_strategy.hpp  gpu_arrays.cu  gpu_arrays.hpp  gpu_utilities.hpp  simulation_kernels.cu  simulation_kernels.hpp  sort_particles.cu  sort_particles.hpp  srd_collision_strategy.cu  srd_collision_strategy.hpp
src/mpcd/: main.cu
src/mpcd/adapters/hdf5/: h5cpp.hpp
src/mpcd/api/: simulation_parameters.cu  simulator_handle.cu
src/mpcd/backend/: backend.hpp
src/mpcd/common/: backend_factory.hpp  mechanic.hpp  mpc_cell.hpp  particle.hpp  probing.hpp  random.hpp  simulation_parameters.cu  subprocess.hpp  vector_3d.hpp
src/mpcd/cpu_backend/: cpu_backend.cpp  cpu_backend.hpp  simulation_functions.cpp  simulation_functions.hpp  volume_container.hpp
src/mpcd/cuda_backend/: cuda_allocator.cu  cuda_allocator.hpp  cuda_backend.cu  cuda_backend.hpp  device_volume_container.hpp  extended_collision.cu  extended_collision.hpp  gpu_arrays.cu  gpu_arrays.hpp  gpu_constants.cu  gpu_constants.hpp  gpu_error_check.hpp  gpu_random.hpp  gpu_utilities.hpp  mechanic.hpp  mpc_cell.hpp  simulation_kernels.cu  simulation_kernels.hpp
src/pympcd/: __init__.py  _pympcd.pyi
tests/: CMakeLists.txt
tests/python/: test_integration.py
tests/statistics/: CMakeLists.txt  bindings.cpp  test_statistics.py
tests/unit/common/: test_vector_3d.cpp
tests/unit/cpp/: test_simulation_functions.cpp
tests/unit/cuda/: test_gpu_arrays.cu  test_memory_safety.cu  test_simulation_kernels.cu
